Add Package Xamarin.FFImageLoading.Svg.Forms 2.3.4 Add FFImageLoading Boilerplate to UWP App.xaml.cs. Added an SVG image to the MainPage.xaml as an embedded resource Observe currently a run-time error: Could not load file or assembly 'SkiaSharp, Version=1.59.0.0....' It is important that we have registered the logger w/ FFImageLoading so we see this error.

--- a/XamFormsWithSvg/XamFormsWithSvg/XamFormsWithSvg.csproj
+++ b/XamFormsWithSvg/XamFormsWithSvg/XamFormsWithSvg.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="sample.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="sample.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.3.4" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
 
