Add Package SkaSharp 1.59.1 to UWP app This resolves the run-time error and we can see the svg sample (check mark)!

--- a/XamFormsWithSvg/XamFormsWithSvg.UWP/XamFormsWithSvg.UWP.csproj
+++ b/XamFormsWithSvg/XamFormsWithSvg.UWP/XamFormsWithSvg.UWP.csproj
@@ -148,6 +148,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.59.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
       <Version>2.3.4</Version>
     </PackageReference>
